Date	Added

12/19
	* Replaced many \033[x;xm with their corresponding CL_xx constants [MC Cameri]
	* Separated NPCs and Maps from map_athena.conf into npcs_list.txt and maps_list.conf [MC Cameri]
	* Modified all the *_athena.conf's to have the import command enabled by default [Ajarn]
	* Added charcommand_conf.txt and log_conf.txt in conf-tmpl/import [Ajarn]
	* Fixed import command for log_athena.conf file [Ajarn]
	* Updated charcommand.conf [nsstrunks]

12/18
	* Added some of my info to Dev/quotes.txt, not done yet... [Ajarn]
	* Added some ideas to Dev/Ideas_Suggestions.txt [Ajarn]
	* Fixed import command in inter_athena.conf file [Ajarn]
	* Fixed a few command compiling problems for TXT [Codemaster]
	* Modified the main.sql to add the friend0 column; also added the upgrade_1.0.0.sql file [Codemaster]
	* Introduced StringBuf into utils for use in building larger queries [MouseJstr]
	* tested GUILD_CACHE (reducing guild related sql traffic to 30%) in 
	  prep for unleasing it on the sql using public [MouseJstr]
	* Fixed some SQL queries crashing char server [davidsiaw]
	* Added several PID GM commands, thanks to Dino9021 [nsstrunks]
	* Storage was merging items incorrectly [Mousejstr]
	* eliminated a uninitialized var when using afm maps [MouseJstr]
	* Added concept of dirty storage to reduce saves/load
	  to the char server (do a clean build!) [MouseJstr]
	* Eliminated storage_storageopen2 as unused [MouseJstr]
	* Switched to account2storage2() whenever possible
	  to eliminate the possibility of saving empty storage
	  back to the character server (storage wipes) [MouseJstr]
	* Made it save storage as soon as you close the storage
	  window to reduce possibility of loss/abuse [MouseJstr]

12/17
	* Added #item [MC Cameri]
	* Added #storagelist, removed @charstoragelist [MC Cameri]
	* db.c: Fixed probs with OnInit, OnTime, and etc NPC probs
	  Just reverted it back. [Lupus]
	* Fixed warning message in db.c line 445 [MC Cameri]